Add PyPI deploy in CD
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -1,8 +1,10 @@
 -c requirements.txt
+black
 flake8
 flake8-bugbear
 flake8-docstrings
 flake8-import-order
-pylint
 mypy
-black
+pylint
+twine
+wheel
