--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,26 @@ on:
       - "*"
 
 jobs:
-  deploy:
+  deploy-pypi:
+    name: Deploy to PyPI
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: "3.8"
+      - name: Build wheel and deploy on PyPI
+        run: |
+          export TAG=${GITHUB_REF##*/}
+          test $(python3 setup.py --version) == $TAG
+          echo Building for tag "$TAG"
+          pip3 install pip-tools
+          pip-sync requirements.txt dev-requirements.txt
+          python3 setup.py sdist bdist_wheel
+          python3 -m twine upload dist/* -u "${{ secrets.PYPI_LOGIN }}" -p "${{ secrets.PYPI_PASSWORD }}"
+  deploy-docker:
     name: Deploy to Docker Hub
     runs-on: ubuntu-latest
     steps:
