--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "deckz"
-version = "2.2.1"
+version = "2.2.2"
 description = "Tool to handle multiple beamer decks."
 authors = ["m09 <142691+m09@users.noreply.github.com>"]
 license = "Apache-2.0"
@@ -11,12 +11,12 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6"
 appdirs = "^1.4.3"
 click = "^7.1.1"
 coloredlogs = "^14.0"
+GitPython = "^3.1.0"
 Jinja2 = "^2.11.1"
-pygit2 = "^1.2.0"
 PyYAML = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
