--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "deckz"
-version = "2.4.1"
+version = "2.5.0"
 description = "Tool to handle multiple beamer decks."
 authors = ["m09 <142691+m09@users.noreply.github.com>"]
 license = "Apache-2.0"
@@ -18,6 +18,7 @@ coloredlogs = "^14.0"
 GitPython = "^3.1.0"
 Jinja2 = "^2.11.1"
 PyYAML = "^5.3.1"
+watchdog = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
