--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "deckz"
-version = "2.5.0"
+version = "2.6.0"
 description = "Tool to handle multiple beamer decks."
 authors = ["m09 <142691+m09@users.noreply.github.com>"]
 license = "Apache-2.0"
@@ -19,6 +19,7 @@ GitPython = "^3.1.0"
 Jinja2 = "^2.11.1"
 PyYAML = "^5.3.1"
 watchdog = "^0.10.2"
+"pdfminer.six" = "^20200402"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
@@ -28,6 +29,8 @@ flake8-docstrings = "^1.5.0"
 flake8-import-order = "^0.18.1"
 mypy = "^0.770"
 pylint = "^2.4.4"
+pytest = "^5.4.1"
+"pdfminer.six" = "^20200402"
 
 [tool.poetry.scripts]
 deckz = 'deckz.__main__:main'
