--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,8 @@ jobs:
       - name: Run the tests
         run: |
           source env/bin/activate
-          pytest
+          pytest --cov=./ --cov-report=xml
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true
