--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ GitPython = "^3.1.0"
 Jinja2 = "^2.11.1"
 PyYAML = "^5.3.1"
 watchdog = "^0.10.2"
-"pdfminer.six" = "^20200402"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
@@ -31,6 +30,7 @@ mypy = "^0.770"
 pylint = "^2.4.4"
 pytest = "^5.4.1"
 "pdfminer.six" = "^20200402"
+pytest-cov = "^2.8.1"
 
 [tool.poetry.scripts]
 deckz = 'deckz.__main__:main'
