Change the way to specify sections
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/tests/test_cli/company/abc/targets.yml
+++ b/tests/test_cli/company/abc/targets.yml
@@ -1,23 +1,9 @@
 - name: p1
   title: Part 1
   sections:
-    - title: First section
-      includes:
-        - about
-        - questions
-    - title: Second section
-      includes:
-        - about
-        - questions
+    - first-section
 
 - name: p2
   title: Part 2
   sections:
-    - title: First section
-      includes:
-        - about
-        - questions
-    - title: Second section
-      includes:
-        - about
-        - questions
+    - about
