--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,12 @@
 [tool.poetry]
 name = "deckz"
-version = "3.1.3"
+version = "3.2.0"
 description = "Tool to handle multiple beamer decks."
 authors = ["m09 <142691+m09@users.noreply.github.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/m09/deckz"
-classifiers = [
-    "Topic :: Software Development :: Build Tools"
-]
+classifiers = ["Topic :: Software Development :: Build Tools"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
@@ -33,7 +31,7 @@ pytest = "^5.4.1"
 pytest-cov = "^2.8.1"
 
 [tool.poetry.scripts]
-deckz = 'deckz.__main__:main'
+deckz = 'deckz.cli:cli'
 
 [build-system]
 requires = ["poetry>=0.12"]
