Introduce flavors in section.yml
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/tests/test_cli/company/abc/p1/first-section/section.yml
+++ b/tests/test_cli/company/abc/p1/first-section/section.yml
@@ -1,4 +1,13 @@
 title: First section
-includes:
-  - path: about
-    title: About
+default_titles:
+  intro: Introduction
+  advanced: Advanced
+  conclusion: Conclusion
+flavors:
+  standard:
+    - intro
+    - advanced
+    - conclusion
+  light:
+    - intro
+    - conclusion
