Build a single handout output
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ watchdog = "^0.10.2"
 google-api-python-client = "^1.12.5"
 google-auth-oauthlib = "^0.4.1"
 tqdm = "^4.50.2"
+pypdf2 = "^1.26.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
