--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,26 @@
 [tool.poetry]
-name = "deckz"
-version = "9.1.0"
-description = "Tool to handle multiple beamer decks."
 authors = ["m09 <142691+m09@users.noreply.github.com>"]
-license = "Apache-2.0"
-readme = "README.md"
-homepage = "https://github.com/m09/deckz"
 classifiers = ["Topic :: Software Development :: Build Tools"]
+description = "Tool to handle multiple beamer decks."
+homepage = "https://github.com/m09/deckz"
+license = "Apache-2.0"
+name = "deckz"
+readme = "README.md"
+version = "9.2.0"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-appdirs = "^1.4.3"
-click = "^7.1.1"
-coloredlogs = "^14.0"
 GitPython = "^3.1.0"
 Jinja2 = "^2.11.1"
 PyYAML = "^5.3.1"
-watchdog = "^0.10.2"
+appdirs = "^1.4.3"
+dulwich = "^0.20.11"
 google-api-python-client = "^1.12.5"
 google-auth-oauthlib = "^0.4.1"
-tqdm = "^4.50.2"
 pypdf2 = "^1.26.0"
-colorama = "^0.4.4"
-dulwich = "^0.20.11"
+python = "^3.6"
+rich = "^9.5.1"
+typer = {version = "^0.3.2", extras = ["all"]}
+watchdog = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
@@ -31,14 +29,14 @@ flake8-bugbear = "^20.1.4"
 flake8-docstrings = "^1.5.0"
 flake8-import-order = "^0.18.1"
 mypy = "^0.770"
+"pdfminer.six" = "^20200402"
 pylint = "^2.4.4"
 pytest = "^5.4.1"
-"pdfminer.six" = "^20200402"
 pytest-cov = "^2.8.1"
 
 [tool.poetry.scripts]
-deckz = 'deckz.cli:cli'
+deckz = 'deckz.cli:main'
 
 [build-system]
-requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+requires = ["poetry>=0.12"]
