--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,30 +9,30 @@ readme = "README.md"
 version = "13.1.0"
 
 [tool.poetry.dependencies]
-GitPython = "^3.1.14"
 Jinja2 = "^2.11.3"
 PyYAML = "^5.4.1"
 appdirs = "^1.4.4"
 attrs = "^20.3.0"
-google-api-python-client = "^1.12.5"
-google-auth-oauthlib = "^0.4.1"
+google-api-python-client = "^2.2.0"
+google-auth-oauthlib = "^0.4.4"
 python = "^3.8"
-rich = "^9.13.0"
-sendgrid = "^6.6.0"
+rich = "^10.1.0"
+sendgrid = "^6.7.0"
 typer = {version = "^0.3.2", extras = ["all"]}
-watchdog = "^0.10.2"
+watchdog = "^2.0.2"
+pygit2 = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
-black = "^19.10b0"
-flake8 = "^3.7.9"
-flake8-bugbear = "^20.1.4"
-flake8-docstrings = "^1.5.0"
+black = "^20.8b1"
+flake8 = "^3.9.1"
+flake8-bugbear = "^21.4.3"
+flake8-docstrings = "^1.6.0"
 flake8-import-order = "^0.18.1"
-mypy = "^0.770"
-"pdfminer.six" = "^20200402"
-pylint = "^2.4.4"
-pytest = "^5.4.1"
-pytest-cov = "^2.8.1"
+mypy = "^0.812"
+"pdfminer.six" = "^20201018"
+pylint = "^2.7.4"
+pytest = "^6.2.3"
+pytest-cov = "^2.11.1"
 
 [tool.poetry.scripts]
 deckz = 'deckz.cli:main'
