--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,15 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Setup Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: "3.8"
-      - name: Set up Poetry
-        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.1.6
       - name: Build wheel and deploy on PyPI
         run: |
           export TAG=${GITHUB_REF##*/}
-          test $($HOME/.poetry/bin/poetry version | cut -f 2 -d " ") == $TAG
+          test $(poetry version | cut -f 2 -d " ") == $TAG
           echo Building for tag "$TAG"
-          $HOME/.poetry/bin/poetry build
-          $HOME/.poetry/bin/poetry publish -u "${{ secrets.PYPI_LOGIN }}" -p "${{ secrets.PYPI_PASSWORD }}"
+          poetry build
+          poetry publish -u "${{ secrets.PYPI_LOGIN }}" -p "${{ secrets.PYPI_PASSWORD }}"
