--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,20 +7,21 @@ on:
   pull_request:
     branches:
       - main
+
 jobs:
   style:
     name: Check style conventions and test the package
     runs-on: ubuntu-latest
-    container: nzmognzmp/deckz-ci-worker
+    container: nzmognzmp/deckz-ci-worker:latest
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
       - name: Install the package
-        run: /root/.poetry/bin/poetry install
+        run: poetry install
       - name: Test the package style conventions
-        run: /root/.poetry/bin/poetry run make check
+        run: poetry run make check
       - name: Run the tests
-        run: /root/.poetry/bin/poetry run pytest --cov=./ --cov-report=xml
+        run: poetry run pytest --cov=./ --cov-report=xml
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v1
         with:
