--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ homepage = "https://github.com/nzmognzmp/deckz"
 license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
-version = "14.0.1"
+version = "14.1.0"
 
 [tool.poetry.dependencies]
 Jinja2 = "^2.11.3"
 PyYAML = "^5.4.1"
 appdirs = "^1.4.4"
 attrs = "^21.2.0"
+email-validator = "^1.1.3"
 google-api-python-client = "^2.3.0"
 google-auth-oauthlib = "^0.4.4"
 pydantic = "^1.8.1"
