--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ homepage = "https://github.com/mlambda/deckz"
 license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
-version = "17.2.0"
+version = "17.3.0"
 
 [tool.poetry.dependencies]
 Jinja2 = "^2.11.3"
@@ -16,6 +16,7 @@ attrs = "^21.2.0"
 email-validator = "^1.1.3"
 google-api-python-client = "^2.3.0"
 google-auth-oauthlib = "^0.4.4"
+matplotlib = ">= 3, < 4"
 pydantic = "^1.8.1"
 pygit2 = "^1.5.0"
 python = "^3.8"
@@ -23,7 +24,6 @@ rich = "^10.1.0"
 sendgrid = "^6.7.0"
 typer = {version = "^0.3.2", extras = ["all"]}
 watchdog = "^2.1.1"
-matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
