--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,36 +6,38 @@ homepage = "https://github.com/mlambda/deckz"
 license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
-version = "18.1.1"
+version = "18.1.2"
 
 [tool.poetry.dependencies]
-Jinja2 = "^2.11.3"
-PyYAML = "^5.4.1"
+Jinja2 = "^3.0.3"
+PyYAML = "^6.0"
 appdirs = "^1.4.4"
-attrs = "^21.2.0"
+attrs = "^21.4.0"
 email-validator = "^1.1.3"
-google-api-python-client = "^2.3.0"
-google-auth-oauthlib = "^0.4.4"
+google-api-python-client = "^2.40.0"
+google-auth-oauthlib = "^0.5.0"
 matplotlib = ">= 3, < 4"
-pydantic = "^1.8.1"
-pygit2 = "^1.5.0"
+pydantic = "^1.9.0"
+pygit2 = "^1.9.0"
 python = "^3.8"
-rich = "^10.1.0"
-sendgrid = "^6.7.0"
-typer = {version = "^0.3.2", extras = ["all"]}
-watchdog = "^2.1.1"
+rich = "^12.0.0"
+sendgrid = "^6.9.7"
+typer = {version = "^0.4.0", extras = ["all"]}
+watchdog = "^2.1.6"
 
 [tool.poetry.dev-dependencies]
-black = "^21.5b1"
-flake8 = "^3.9.2"
-flake8-bugbear = "^21.4.3"
+black = "^22.1.0"
+flake8 = "^4.0.1"
+flake8-bugbear = "^22.1.11"
 flake8-docstrings = "^1.6.0"
-isort = "^5.9.1"
-mypy = "^0.812"
-"pdfminer.six" = "^20201018"
-pylint = "^2.8.2"
-pytest = "^6.2.4"
-pytest-cov = "^2.11.1"
+isort = "^5.10.1"
+mypy = "^0.940"
+"pdfminer.six" = "^20211012"
+pylint = "^2.12.2"
+pytest = "^7.0.1"
+pytest-cov = "^3.0.0"
+types-PyYAML = "^6.0.4"
+types-requests = "^2.27.11"
 
 [tool.poetry.scripts]
 deckz = 'deckz.cli:main'
