--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,24 +6,24 @@ homepage = "https://github.com/mlambda/deckz"
 license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
-version = "18.1.2"
+version = "18.1.3"
 
 [tool.poetry.dependencies]
-Jinja2 = "^3.0.3"
-PyYAML = "^6.0"
-appdirs = "^1.4.4"
+Jinja2 = "^3"
+PyYAML = "^6"
+appdirs = "^1.4"
 attrs = "^21.4.0"
 email-validator = "^1.1.3"
 google-api-python-client = "^2.40.0"
-google-auth-oauthlib = "^0.5.0"
-matplotlib = ">= 3, < 4"
+google-auth-oauthlib = "^0.4"
+matplotlib = "^3"
 pydantic = "^1.9.0"
 pygit2 = "^1.9.0"
 python = "^3.8"
-rich = "^12.0.0"
+rich = "^12"
 sendgrid = "^6.9.7"
 typer = {version = "^0.4.0", extras = ["all"]}
-watchdog = "^2.1.6"
+watchdog = "^2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
