--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,38 +6,38 @@ homepage = "https://github.com/mlambda/deckz"
 license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
-version = "18.1.3"
+version = "18.1.4"
 
 [tool.poetry.dependencies]
 Jinja2 = "^3"
 PyYAML = "^6"
 appdirs = "^1.4"
-attrs = "^21.4.0"
-email-validator = "^1.1.3"
-google-api-python-client = "^2.40.0"
-google-auth-oauthlib = "^0.4"
+attrs = "^22"
+email-validator = "^1.3.0"
+google-api-python-client = "^2.63.0"
+google-auth-oauthlib = "^0.5.3"
 matplotlib = "^3"
-pydantic = "^1.9.0"
-pygit2 = "^1.9.0"
+pydantic = "^1.10"
+pygit2 = "^1.10"
 python = "^3.8"
 rich = "^12"
-sendgrid = "^6.9.7"
-typer = {version = "^0.4.0", extras = ["all"]}
+sendgrid = "^6"
+typer = {version = "^0.6", extras = ["all"]}
 watchdog = "^2"
 
-[tool.poetry.dev-dependencies]
-black = "^22.1.0"
-flake8 = "^4.0.1"
-flake8-bugbear = "^22.1.11"
+[tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
+flake8 = "^5.0.4"
+flake8-bugbear = "^22.9.23"
 flake8-docstrings = "^1.6.0"
 isort = "^5.10.1"
-mypy = "^0.940"
-"pdfminer.six" = "^20211012"
-pylint = "^2.12.2"
-pytest = "^7.0.1"
-pytest-cov = "^3.0.0"
-types-PyYAML = "^6.0.4"
-types-requests = "^2.27.11"
+mypy = "^0.981"
+"pdfminer.six" = "^20220524"
+pylint = "^2.15.3"
+pytest = "^7.1.3"
+pytest-cov = "^4.0.0"
+types-PyYAML = "^6.0.12"
+types-requests = "^2.28.11"
 
 [tool.poetry.scripts]
 deckz = 'deckz.cli:main'
