--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           python-version: "3.8"
       - name: Install Poetry
-        uses: snok/install-poetry@v1.1.6
+        uses: snok/install-poetry@v1
       - name: Build wheel and deploy on PyPI
         run: |
           export TAG=${GITHUB_REF##*/}
-          test $(poetry version | cut -f 2 -d " ") == $TAG
+          test $(poetry version | cut -f 2 -d " ") = $TAG
           echo Building for tag "$TAG"
           poetry build
           poetry publish -u "${{ secrets.PYPI_LOGIN }}" -p "${{ secrets.PYPI_PASSWORD }}"
