--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,5 +46,5 @@ deckz = 'deckz.cli:main'
 profile = "black"
 
 [build-system]
-build-backend = "poetry.masonry.api"
-requires = ["poetry>=0.12"]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
