--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,31 +13,30 @@ Jinja2 = "^3"
 PyYAML = "^6"
 appdirs = "^1.4"
 attrs = "^22"
-email-validator = "^1.3.0"
+email-validator = "^1.3"
 google-api-python-client = "^2.63.0"
 google-auth-oauthlib = "^0.4"
 matplotlib = "^3"
 pydantic = "^1.10"
-pygit2 = "^1.10"
-python = "^3.8"
-rich = "^12"
+pygit2 = "^1.11"
+python = "^3.8.1"
+rich = "^13"
 sendgrid = "^6"
-typer = {version = "^0.6", extras = ["all"]}
-watchdog = "^2"
+typer = "^0.7"
+watchdog = "^3"
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.8.0"
-flake8 = "^5.0.4"
-flake8-bugbear = "^22.9.23"
-flake8-docstrings = "^1.6.0"
-isort = "^5.10.1"
-mypy = "^0.981"
-"pdfminer.six" = "^20220524"
-pylint = "^2.15.3"
-pytest = "^7.1.3"
+black = "^23.1.0"
+flake8 = "^6.0.0"
+flake8-bugbear = "^23.3.23"
+isort = "^5.12.0"
+mypy = "^1.1.1"
+"pdfminer.six" = "^20221105"
+pylint = "^2.17.1"
+pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
-types-PyYAML = "^6.0.12"
-types-requests = "^2.28.11"
+types-PyYAML = "^6.0.12.8"
+types-requests = "^2.28.11.16"
 
 [tool.poetry.scripts]
 deckz = 'deckz.cli:main'
