--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,17 +25,22 @@ typer = "^0.7"
 watchdog = "^3"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-flake8 = "^6.0.0"
-flake8-bugbear = "^23.3.23"
-isort = "^5.12.0"
-mypy = "^1.1.1"
+black = "^23"
+flake8 = "^6"
+flake8-bugbear = "^23"
+isort = "^5"
+mkdocs = "^1"
+mkdocs-gen-files = "^0.4"
+mkdocs-literate-nav = "^0.6"
+mkdocs-material = "^9"
+mkdocstrings = {extras = ["python"], version = "^0.20.0"}
+mypy = "^1"
 "pdfminer.six" = "^20221105"
-pylint = "^2.17.1"
-pytest = "^7.2.2"
-pytest-cov = "^4.0.0"
-types-PyYAML = "^6.0.12.8"
-types-requests = "^2.28.11.16"
+pylint = "^2"
+pytest = "^7"
+pytest-cov = "^4"
+types-PyYAML = "^6"
+types-requests = "^2"
 
 [tool.poetry.scripts]
 deckz = 'deckz.cli:main'
