--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,18 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
+
       - name: Install the package
         run: poetry install
+
       - name: Test the package style conventions
         run: poetry run make check
+
       - name: Run the tests
         run: poetry run pytest --cov=./ --cov-report=xml
+
       - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
           fail_ci_if_error: true
+          root_dir: ./
