--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ homepage = "https://github.com/mlambda/deckz"
 license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
-version = "20.0.0"
+version = "20.1.0"
 
 [tool.poetry.dependencies]
 Jinja2 = "^3"
 PyYAML = "^6"
 appdirs = "^1.4"
+click = "^8.1.3"
 email-validator = "^1.3"
 google-api-python-client = "^2.63.0"
 google-auth-oauthlib = "^0.4"
@@ -21,7 +22,6 @@ pygit2 = "^1.11"
 python = "^3.8.1"
 rich = "^13"
 sendgrid = "^6"
-typer = "^0.7"
 watchdog = "^3"
 
 [tool.poetry.group.dev.dependencies]
