Use Typer instead of Click
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ version = "20.2.0"
 Jinja2 = "^3"
 PyYAML = "^6"
 appdirs = "^1"
-click = "^8"
 email-validator = "^2"
 google-api-python-client = "^2"
 google-auth-oauthlib = "^1"
@@ -22,6 +21,7 @@ pygit2 = "^1"
 python = "^3.10"
 rich = "^13"
 sendgrid = "^6"
+typer = "^0.12"
 watchdog = "^4"
 
 [tool.poetry.group.dev.dependencies]
