--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,24 +25,24 @@ typer = "^0.12"
 watchdog = "^4"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23"
-flake8 = "^6"
-flake8-bugbear = "^23"
-flake8-new-union-types = "^0.4"
-flake8-pep585 = "^0.1"
-isort = "^5"
-mkdocs = "^1"
-mkdocs-gen-files = "^0.4"
-mkdocs-literate-nav = "^0.6"
-mkdocs-material = "^9"
-mkdocstrings = {extras = ["python"], version = "^0.20"}
-mypy = "^1"
-"pdfminer.six" = "^20221105"
-pylint = "^2"
-pytest = "^7"
-pytest-cov = "^4"
-types-PyYAML = "^6"
-types-requests = "^2"
+black = "*"
+flake8 = "*"
+flake8-bugbear = "*"
+flake8-new-union-types = "*"
+flake8-pep585 = "*"
+isort = "*"
+mkdocs = "*"
+mkdocs-gen-files = "*"
+mkdocs-literate-nav = "*"
+mkdocs-material = "*"
+mkdocstrings = {extras = ["python"], version = "*"}
+mypy = "*"
+"pdfminer.six" = "*"
+pylint = "*"
+pytest = "*"
+pytest-cov = "*"
+types-PyYAML = "*"
+types-requests = "*"
 
 [tool.poetry.scripts]
 deckz = 'deckz.cli:main'
