--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,7 +16,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: nzmognzmp/deckz-ci-worker:latest
+    container: shuuchuu/deckz-ci:latest
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
