--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ homepage = "https://github.com/mlambda/deckz"
 license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
-version = "20.3.0"
+version = "20.3.1"
 
 [tool.poetry.dependencies]
 Jinja2 = "^3"
@@ -22,7 +22,7 @@ python = "^3.10"
 rich = "^13"
 sendgrid = "^6"
 typer = "^0.12"
-watchdog = "^4"
+watchdog = "^5"
 
 [tool.poetry.group.dev.dependencies]
 mkdocs = "*"
@@ -34,7 +34,7 @@ mypy = "*"
 "pdfminer.six" = "*"
 pytest = "*"
 pytest-cov = "*"
-ruff = "^0.5.4"
+ruff = "*"
 types-PyYAML = "*"
 types-requests = "*"
 
