Set correct documentation convention in ruff settings
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,9 @@ ignore = ["C901", "D1", "D203", "D213"]
 preview = true
 select = ["A", "B", "C", "D", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "UP", "W"]
 
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
 [tool.mypy]
 disallow_untyped_defs = true
 ignore_missing_imports = true
