Finally kill targets.py by reimplementing img-deps
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ deckz = 'deckz.cli:main'
 target-version = "py310"
 
 [tool.ruff.lint]
-ignore = ["C901", "D1", "D203", "D213"]
+ignore = ["D1", "D203", "D213"]
 preview = true
 select = ["A", "B", "C", "D", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "UP", "W"]
 
