Add NewType for part names
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,20 +9,21 @@ readme = "README.md"
 version = "20.3.1"
 
 [tool.poetry.dependencies]
-Jinja2 = "^3"
-PyYAML = "^6"
-appdirs = "^1"
-cyclopts = "^3"
-email-validator = "^2"
-google-api-python-client = "^2"
-google-auth-oauthlib = "^1"
-matplotlib = "^3"
-pydantic = "^2"
-pygit2 = "^1"
-python = "^3.10"
-rich = "^13"
-sendgrid = "^6"
-watchdog = "^6"
+Jinja2 = "^3" 
+PyYAML = "^6" 
+appdirs = "^1" 
+cyclopts = "^3.1.1" # Should keep minor and patch
+email-validator = "^2" 
+google-api-python-client = "^2" 
+google-auth-oauthlib = "^1" 
+matplotlib = "^3" 
+pydantic = "^2" 
+pygit2 = "^1" 
+python = "^3.10" 
+rich = "^13" 
+sendgrid = "^6" 
+typer = "^0.13" 
+watchdog = "^6" 
 
 [tool.poetry.group.dev.dependencies]
 mkdocs = "*"
