--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: CD
 on:
   push:
     tags:
-      - "*"
+      - "v*"
 
 jobs:
   deploy-pypi:
@@ -11,20 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-
-      - name: Build wheel and deploy on PyPI
+      - name: Build and deploy on PyPI
         run: |
           export TAG=${GITHUB_REF##*/}
-          test $(poetry version | cut -f 2 -d " ") = $TAG
-          echo Building for tag "$TAG"
-          poetry build
-          poetry publish -u "${{ secrets.PYPI_LOGIN }}" -p "${{ secrets.PYPI_PASSWORD }}"
+          test v$(poetry version | cut -f 2 -d " ") = $TAG
+          uv build
+          uv publish
