--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,10 +19,10 @@ jobs:
     container: shuuchuu/deckz-ci:latest
     steps:
       - name: Clone repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install the package
-        run: poetry install
+        run: uv sync
 
       - name: Setup Pages
         id: pages
