--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+
       - name: Install the package
         run: uv sync
 
@@ -29,7 +32,7 @@ jobs:
         uses: actions/configure-pages@v2
 
       - name: Build with MkDocs
-        run: poetry run mkdocs build
+        run: uv run mkdocs build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
