Add upgrade script and a bunch of breaking changes
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/tests/test_cli/company/abc/latex/first-section/first-section.yml
+++ b/tests/test_cli/company/abc/latex/first-section/first-section.yml
@@ -4,11 +4,12 @@ default_titles:
   advanced: Advanced
   conclusion: Conclusion
 flavors:
-  standard:
-    - intro
-    - advanced
-    - conclusion
-  light:
-    - intro
-    - conclusion
-version: 3
+  - name: standard
+    includes:
+      - intro
+      - advanced
+      - conclusion
+  - name: light
+    includes:
+      - intro
+      - conclusion
