--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ theme:
 
 extra_css:
   - css/code_select.css
+  - css/material_mkdocstrings.css
 
 nav:
   - Index: index.md
@@ -18,4 +19,21 @@ plugins:
   - literate-nav:
       nav_file: SUMMARY.md
   - section-index
-  - mkdocstrings
+  - mkdocstrings:
+      handlers:
+        python:
+          paths: [.]
+          options:
+            members_order: source
+            separate_signature: true
+            filters: ["!^_"]
+            docstring_options:
+              ignore_init_summary: true
+            merge_init_into_class: true
+            show_signature_annotations: true
+            signature_crossrefs: true
+            extensions:
+              - docs/plugins/griffe_doclinks.py
+          import:
+            - url: https://docs.python.org/3/objects.inv
+              domains: [py, std]
