--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "matplotlib >= 3, < 4",
   "pydantic >= 2, < 3",
   "pygit2 >= 1, < 2",
+  "pyyaml >= 6, < 7",
   "rich >= 13, < 14",
   "sendgrid >= 6, < 7",
   "typer >= 0.13, < 1",
@@ -26,7 +27,7 @@ homepage = "https://github.com/mlambda/deckz"
 name = "deckz"
 readme = "README.md"
 requires-python = ">= 3.12"
-version = "22.0.0"
+version = "22.0.1"
 
 [dependency-groups]
 dev = [
