Refactor the registry and apply to more classes (assets builders, compiler)
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/tests/test_cli/deckz.yml
+++ b/tests/test_cli/deckz.yml
@@ -1,6 +1,9 @@
-build_command:
-  - latexmk
-  - -pdflatex=xelatex -shell-escape -interaction=nonstopmode %O %S
-  - -dvi-
-  - -ps-
-  - -pdf
+components:
+  compiler:
+    default:
+      build_command:
+        - latexmk
+        - -pdflatex=xelatex -shell-escape -interaction=nonstopmode %O %S
+        - -dvi-
+        - -ps-
+        - -pdf
