Tweak doc options
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,8 @@ plugins:
         python:
           paths: [.]
           options:
+            docstring_style: google
+            show_symbol_type_heading: true
             members_order: source
             separate_signature: true
             filters: ["!^_"]
