--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
   "google-api-python-client >= 2, < 3",
   "google-auth-oauthlib >= 1, < 2",
   "jinja2 >= 3, < 4",
+  "kaleido==0.4.0rc1",
   "matplotlib >= 3, < 4",
+  "plotly>=5.24.1",
   "pydantic >= 2, < 3",
   "pygit2 >= 1, < 2",
   "pyyaml >= 6, < 7",
@@ -27,7 +29,7 @@ homepage = "https://github.com/mlambda/deckz"
 name = "deckz"
 readme = "README.md"
 requires-python = ">= 3.12"
-version = "22.0.4"
+version = "22.1.1"
 
 [dependency-groups]
 dev = [
