Fix github url in pyproject.toml
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
   "watchdog >= 6, < 7",
 ]
 description = "Tool to handle multiple beamer decks."
-homepage = "https://github.com/mlambda/deckz"
+homepage = "https://github.com/shuuchuu/deckz"
 name = "deckz"
 readme = "README.md"
 requires-python = ">= 3.12"
