--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ homepage = "https://github.com/shuuchuu/deckz"
 name = "deckz"
 readme = "README.md"
 requires-python = ">= 3.12"
-version = "22.1.1"
+version = "23.0.0"
 
 [dependency-groups]
 dev = [
@@ -58,7 +58,7 @@ target-version = "py312"
 [tool.ruff.lint]
 ignore = ["D1", "D203", "D213"]
 preview = true
-select = ["A", "B", "C", "D", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "UP", "W"]
+select = ["A", "B", "C", "D", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "TC", "UP", "W"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
