--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,19 +34,19 @@ version = "24.0.1"
 
 [dependency-groups]
 dev = [
-  "mkdocs",
-  "mkdocs-gen-files",
-  "mkdocs-literate-nav",
-  "mkdocs-material",
-  "mkdocstrings[python]",
-  "mypy",
-  "pdfminer.six",
-  "pytest-cov",
-  "pytest",
-  "ruff",
-  "types-pyyaml",
-  "types-requests",
-  "mkdocs-section-index>=0.3.9",
+  "mkdocs >= 1",
+  "mkdocs-gen-files >= 0.5",
+  "mkdocs-literate-nav >= 0.6",
+  "mkdocs-material >= 9",
+  "mkdocs-section-index >= 0.3",
+  "mkdocstrings[python] >= 0.29",
+  "mypy >= 1",
+  "pdfminer.six >= 20250327",
+  "pytest >= 8",
+  "pytest-cov >= 6",
+  "ruff >= 0.11",
+  "types-pyyaml >= 6",
+  "types-requests >= 2.32",
 ]
 
 [project.scripts]
