--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,14 @@ dependencies = [
   "google-api-python-client >= 2, < 3",
   "google-auth-oauthlib >= 1, < 2",
   "jinja2 >= 3, < 4",
-  "kaleido >= 0.4.0rc1, < 1",
+  "kaleido >= 1, < 2",
   "matplotlib >= 3, < 4",
-  "plotly >= 5, < 6",
+  "niquests >= 3, < 4",
+  "plotly >= 6, < 7",
   "pydantic >= 2, < 3",
   "pygit2 >= 1, < 2",
   "pyyaml >= 6, < 7",
-  "rich >= 13, < 14",
+  "rich >= 14, < 15",
   "sendgrid >= 6, < 7",
   "typer >= 0.13, < 1",
   "watchdog >= 5, < 6",
@@ -45,8 +46,8 @@ dev = [
   "pytest >= 8",
   "pytest-cov >= 6",
   "ruff >= 0.11",
+  "types-appdirs >= 1, < 2",
   "types-pyyaml >= 6",
-  "types-requests >= 2.32",
 ]
 
 [project.scripts]
@@ -69,5 +70,5 @@ ignore_missing_imports = true
 strict_optional = true
 
 [build-system]
-build-backend = "hatchling.build"
-requires = ["hatchling"]
+build-backend = "uv_build"
+requires = ["uv_build>=0.8.22,<0.9.0"]
