--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,14 @@ dependencies = [
   "rich >= 14, < 15",
   "sendgrid >= 6, < 7",
   "typer >= 0.13, < 1",
-  "watchdog >= 5, < 6",
+  "watchfiles >= 1, < 2",
 ]
 description = "Tool to handle multiple beamer decks."
 homepage = "https://github.com/shuuchuu/deckz"
 name = "deckz"
 readme = "README.md"
 requires-python = ">= 3.12"
-version = "24.1.2"
+version = "24.1.3"
 
 [dependency-groups]
 dev = [
